<resources>
    <string name="app_name">BadArtProjectOne</string>

    <string name="title">Bad ARt by Miguel Rivers</string>

    <string name="contact_info">Contact Info:</string>
    <string name="adress_dark_sysde_of_the">adress: Dark Sysde of the</string>
    <string name="email_yakaykayk_yak_com">email: YAKAYKAYK@YAK.COM</string>
    <string name="about_us">About Us:</string>
    <string name="some_people_like_good_art_we_here_at_miguel_rivers_like_bad_art">Some people like good art, we here at Miguel Rivers like bad art!!</string>
    <string name="bad_art_bad_art_bad_art_bad_art_bad_art">BAD ART BAD ART BAD ART BAD ART BAD ART</string>


</resources>
